src/test/deca/syntax/valid/nonprovided/float.deca
{
float a = 3.14f;
float b = 0xabc.dfp1f;
}
