src/test/deca/syntax/invalid/nonprovided/integers.deca
{
45 + 34.3 = 23aF;
}
